# flatbuffers-rs

./: Cargo.toml  README.md  ROADMAP.md  llms.txt
annotator/: Cargo.toml
annotator/src/: binary_walker.rs  formatter.rs  lib.rs  region.rs
codegen/: Cargo.toml
codegen-flatbuffers/: Cargo.toml
codegen-flatbuffers/src/: lib.rs
codegen/src/: code_writer.rs  dart_enum_gen.rs  dart_gen.rs  dart_struct_gen.rs  dart_type_map.rs  enum_gen.rs  lib.rs  namespace_tree.rs  rust_gen.rs  service_gen.rs  struct_gen.rs  table_gen.rs  ts_enum_gen.rs  ts_gen.rs  ts_struct_gen.rs  ts_table_gen.rs  ts_type_map.rs  type_map.rs
codegen/src/rust_table_gen/: builder.rs  helpers.rs  mod.rs  object_api.rs  reader.rs
codegen/src/ts_table_gen/: builder.rs  helpers.rs  mod.rs  object_api.rs  reader.rs
compiler/: Cargo.toml  build.rs
compiler/src/: analyzer.rs  bfbs.rs  compiler.rs  conform.rs  error.rs  lib.rs  main.rs  reflection.rs  struct_layout.rs  type_index.rs
compiler/src/json/: decoder.rs  encoder.rs  error.rs  mod.rs
compiler/testdata/codegen_golden/: enum_basic.expected  enum_basic.fbs  enum_bitflags.expected  enum_with_gaps.expected  keyword_escape.expected  keyword_escape.fbs  more_defaults.expected  namespace_cross_ref.expected  namespace_multi.expected  namespace_multi.fbs  namespace_simple.expected  nested_flatbuffer.expected  object_api_table.expected  object_api_union.expected  object_api_union.fbs  optional_scalars.expected  optional_scalars.fbs  root_type_with_ident.expected  root_type_with_ident.fbs  struct_array.expected  struct_key.expected  struct_key.fbs  struct_nested.expected  struct_simple.expected  struct_simple.fbs  table_enum_field.expected  table_enum_field.fbs  table_key.expected  table_key.fbs  table_scalar_fields.expected  table_string_field.expected  table_struct_field.expected  table_struct_field.fbs  table_table_field.expected  table_vector_fields.expected  table_vector_fields.fbs  union_basic.fbs  union_cross_ns.expected
compiler/testdata/dart_codegen_golden/: dart_enum_basic.expected  dart_enum_bitflags.expected  dart_enum_with_gaps.expected  dart_keyword_escape.expected  dart_keyword_escape.fbs  dart_more_defaults.expected  dart_more_defaults.fbs  dart_namespace_cross_ref.expected  dart_namespace_cross_ref.fbs  dart_namespace_multi.expected  dart_namespace_simple.expected  dart_namespace_simple.fbs  dart_nested_flatbuffer.expected  dart_nested_flatbuffer.fbs  dart_object_api_struct.expected  dart_object_api_table.expected  dart_object_api_table.fbs  dart_object_api_union.expected  dart_optional_scalars.expected  dart_root_type_with_ident.expected  dart_struct_array.expected  dart_struct_array.fbs  dart_struct_key.expected  dart_struct_simple.expected  dart_table_enum_field.expected  dart_table_key.expected  dart_table_scalar.expected  dart_table_scalar.fbs  dart_table_scalar_fields.expected  dart_table_scalar_fields.fbs  dart_table_string_field.expected  dart_table_string_field.fbs  dart_table_struct_field.expected  dart_table_table_field.expected  dart_table_table_field.fbs  dart_table_vectors.expected  dart_union_basic.expected  dart_union_cross_ns.expected
compiler/testdata/golden/: attributes_preserved.expected  attributes_preserved.fbs  basic_type_resolution.expected  basic_type_resolution.fbs  bitflags_enum.expected  bitflags_enum.fbs  complex_field_ordering_with_ids.expected  complex_field_ordering_with_ids.fbs  cross_namespace_resolution.expected  cross_namespace_resolution.fbs  deeply_nested_namespace.expected  deeply_nested_namespace.fbs  default_values_all_types.expected  default_values_all_types.fbs  deprecated_field_preservation.expected  deprecated_field_preservation.fbs  doc_comments_preserved.expected  doc_comments_preserved.fbs  empty_table_analysis.expected  empty_union_analysis.expected  empty_union_analysis.fbs  enum_default_value_resolution.expected  enum_default_value_resolution.fbs  enum_non_ascending_values.expected  enum_non_ascending_values.fbs  enum_typed_field.expected  enum_typed_field.fbs  enum_with_ulong_underlying_type.expected  enum_with_ulong_underlying_type.fbs  error_bitflags_out_of_range.expected  error_bitflags_out_of_range.fbs  error_circular_struct.expected  error_circular_struct.fbs  error_circular_struct_chain.expected  error_circular_struct_chain.fbs  error_default_byte_overflow.expected  error_default_byte_overflow.fbs  error_default_byte_underflow.expected  error_default_byte_underflow.fbs  error_default_int_overflow.expected  (+168 more)
compiler/testdata/serde_codegen_golden/: serde_test.expected  serde_test.fbs
compiler/testdata/ts_codegen_golden/: ts_deprecated.expected  ts_deprecated.fbs  ts_documentation.expected  ts_documentation.fbs  ts_enum_basic.expected  ts_enum_basic.fbs  ts_enum_bitflags.expected  ts_enum_bitflags.fbs  ts_enum_with_gaps.expected  ts_enum_with_gaps.fbs  ts_file_identifier.expected  ts_file_identifier.fbs  ts_keyword_escape.expected  ts_more_defaults.expected  ts_namespace.expected  ts_namespace.fbs  ts_namespace_cross_ref.expected  ts_namespace_multi.expected  ts_nested_flatbuffer.expected  ts_optional_scalars.expected  ts_optional_scalars.fbs  ts_struct_array.expected  ts_struct_array.fbs  ts_struct_key.expected  ts_struct_nested.expected  ts_struct_nested.fbs  ts_struct_simple.expected  ts_struct_simple.fbs  ts_table_enum_field.expected  ts_table_key.expected  ts_table_scalar.expected  ts_table_string_field.expected  ts_table_struct_field.expected  ts_table_vectors.fbs  (+10 more)
compiler/tests/: bfbs_test.rs  codegen_test.rs  compile_generated_test.rs  compile_test.rs  cross_compat_test.rs  dart_codegen_test.rs  fbs_gen.rs  fuzz_test.rs  golden_test.rs  integration_test.rs  json_test.rs  random_schema_test.rs  schema_api_test.rs  serde_derive_test.rs  ts_codegen_test.rs
data-gen/: Cargo.toml
data-gen/src/: builder.rs  lib.rs  tests.rs
parser/: Cargo.toml  build.rs
parser/src/: base_type.rs  error.rs  lib.rs  parser.rs  tokenizer.rs
parser/tests/: golden_test.rs
schema/: Cargo.toml
schema/src/: buf_reader.rs  lib.rs  resolved.rs
wasm-api/: Cargo.toml
wasm-api/src/: lib.rs
(+178 files in other folders)
