[package]
name = "flatc-rs-annotator"
description = "FlatBuffers binary annotation engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flatc-rs-schema = { path = "../schema" }
thiserror = "2"
