[package]
name = "flatc-rs-codegen"
description = "Code generators for FlatBuffers schemas (Rust, TypeScript)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flatc-rs-schema = { path = "../schema" }
thiserror = "2"
