[package]
name = "flatc-rs-compiler"
description = "FlatBuffers schema compiler (Rust implementation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "flatc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flatbuffers = { version = "25.12.19" }
flatc-rs-annotator = { path = "../annotator" }
flatc-rs-codegen = { path = "../codegen" }
flatc-rs-parser = { path = "../parser" }
flatc-rs-schema = { path = "../schema" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
flatbuffers = { version = "25.12.19", features = ["serialize"] }
flatc-rs-fbs-gen = { path = "../fbs-gen" }
flatc-rs-test-utils = { path = "../test-utils" }
quickcheck = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
