[package]
name = "flatc-rs-data-gen"
version = "0.1.0"
edition = "2021"
description = "Random FlatBuffers JSON data generator from compiled Schema"

[dependencies]
flatc-rs-schema = { path = "../schema" }
rand = "0.8"
serde_json = "1"

[dev-dependencies]
flatc-rs-compiler = { path = "../compiler" }
flatc-rs-fbs-gen = { path = "../fbs-gen" }
