[package]
name = "flatc-rs-data-gen"
description = "Random FlatBuffers JSON data generator from compiled Schema"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flatc-rs-schema = { path = "../schema" }
rand = "0.8"
serde_json = "1"

[dev-dependencies]
flatc-rs-compiler = { path = "../compiler" }
flatc-rs-fbs-gen = { path = "../fbs-gen" }
