[package]
name = "flatc-rs-parser"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter based parser for FlatBuffers schema files"

[dependencies]
flatc-rs-schema = { path = "../schema" }
thiserror = "2"
tree-sitter = "0.24"
flatc-rs-grammar = { path = "../grammar" }

[dev-dependencies]
flatc-rs-test-utils = { path = "../test-utils" }
serde_json = "1"
