[package]
name = "flatc-rs-parser"
version = "0.1.0"
edition = "2021"
description = "Hand-written recursive-descent parser for FlatBuffers schema files"

[dependencies]
flatc-rs-schema = { path = "../schema" }
thiserror = "2"

[dev-dependencies]
flatc-rs-test-utils = { path = "../test-utils" }
serde_json = "1"
