[package]
name = "flatc-rs-parser"
description = "Hand-written recursive-descent parser for FlatBuffers schema files"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flatc-rs-schema = { path = "../schema" }
thiserror = "2"

[dev-dependencies]
flatc-rs-test-utils = { path = "../test-utils" }
serde_json = "1"
