[package]
name = "flatc-rs-schema"
description = "Schema types for the FlatBuffers Rust compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
